kubernetes/4_kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roboto-deployment
  namespace: roboto
  labels:
    app: roboto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roboto
  template:
    metadata:
      labels:
        app: roboto
    spec:
      containers:
      - name: roboto
        image: ghcr.io/akvanvig/roboto:latest
        resources:
          requests:
            memory: "265M"
            cpu: "500m"
          limits:
            memory: "1G"
            cpu: "1G"
        command: ["python", "client.py"]
        volumeMounts:
          - name: config
            mountPath: MrRoboto/config/bot_config.json
            subPath: bot_config.json
            readOnly: true
          - name: secrets
            mountPath: MrRoboto/config/bot_secrets.json
            subPath: bot_secrets.json
            readOnly: true
          - name: mediafiles
            mountPath: MrRoboto/media

      volumes:
        - name: config
          configMap:
            name: robotobot-config
        - name: secrets
          secret:
            secretName: robotobot-secrets
        - name: mediafiles
          persistentVolumeClaim:
            claimName: nfs-robotomediafiles-claim
