kubernetes/3_database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roboto-postgres
  namespace: roboto
  labels:
    app: roboto-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roboto-postgres
  template:
    metadata:
      labels:
        app: roboto-postgres
    spec:
      containers:
        - name: roboto-postgres
          image: postgres
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "300Mi"
              cpu: "150m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              readOnly: false
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: nfs-robotopostgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: svc-robotodb
  namespace: roboto
  labels:
    app: roboto-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: roboto-postgres
