kubernetes/1_kube-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: roboto-networkpolicy
  namespace: roboto
spec:
  podSelector:
    matchLabels:
      app: roboto
  policyTypes:
  - Egress
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: robotodb-networkpolicy
  namespace: roboto
spec:
  podSelector:
    matchLabels:
      app: roboto-postgres
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: roboto
    ports:
    - protocol: TCP
      port: 5432
  egress: []
